--- a/index.html
+++ b/index.html
@@ -2,5 +2,23 @@
 <body>
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
 <h2> This is chandigarh university.</h2>
+  <table style="width:70%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
+
 </body>
 </html>
