--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
 <h2> This is chandigarh university.</h2>
-  <table style="width:70%">
+  <table style="width:70%","font-size: 25px;">
   <tr>
     <th>Firstname</th>
     <th>Lastname</th>
