--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <td>Jackson</td>
     <td>94</td>
   </tr>
+     <tr>
+    <td>new</td>
+    <td>row</td>
+    <td>94</td>
+  </tr>
 </table>
 
 </body>
