--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
 <h2> This is chandigarh university.</h2>
-  <table style="width:70%","font-size: 25px;">
-  <tr>
+  <table style="width:70%">
+  <tr style="color:blue;font-size:50px">
     <th>Firstname</th>
     <th>Lastname</th>
     <th>Age</th>
