--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<body>
+<body style=" text-align: center;
+  border: 3px solid green;">
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
-<h2> This is chandigarh university.</h2>
+<h2> This is chandigarh university. student data</h2>
   <table style="width:70%">
   <tr style="color:blue;font-size:50px">
     <th>Firstname</th>
