--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
 <h2> This is chandigarh university. student data</h2>
   <table style="width:70%">
-  <tr style="color:blue;font-size:50px">
+  <tr style="color:red;font-size:50px">
     <th>Firstname</th>
     <th>Lastname</th>
     <th>Age</th>
   </tr>
-  <tr>
+  <tr style="color:blue;font-size:35px">
     <td>Jill</td>
     <td>Smith</td>
     <td>50</td>
   </tr>
-  <tr>
+  <tr style="color:blue;font-size:35px">
     <td>Eve</td>
     <td>Jackson</td>
     <td>94</td>
   </tr>
-     <tr>
+     <tr style="color:blue;font-size:35px">
     <td>new</td>
     <td>row</td>
     <td>94</td>
