--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   border: 3px solid green;">
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
 <h2> This is chandigarh university. student data</h2>
-  <table style="width:70%">
+  <table style="width:70%;text-align: center;">
   <tr style="color:red;font-size:50px">
     <th>Firstname</th>
     <th>Lastname</th>
@@ -12,17 +12,17 @@
   <tr style="color:blue;font-size:35px">
     <td>Jill</td>
     <td>Smith</td>
-    <td>50</td>
+    <td>32</td>
   </tr>
   <tr style="color:blue;font-size:35px">
     <td>Eve</td>
     <td>Jackson</td>
-    <td>94</td>
+    <td>25</td>
   </tr>
      <tr style="color:blue;font-size:35px">
     <td>new</td>
     <td>row</td>
-    <td>94</td>
+    <td>15</td>
   </tr>
 </table>
 
