--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   border: 3px solid green;">
 <h1><bold>.....THIS IS INDEX FILE..... </bold></h1>
 <h2> This is chandigarh university. student data</h2>
-  <table style="width:100%;text-align: center;">
+  <table style="width:100%;text-align: center;padding:20px;">
   <tr style="color:red;font-size:50px">
     <th>Firstname</th>
     <th>Lastname</th>
